--- a/js/tinymce/skins/lightgray/FloatPanel.less
+++ b/js/tinymce/skins/lightgray/FloatPanel.less
@@ -87,12 +87,12 @@
 	left: 0 !important;
 	top: initial !important;
 	bottom: 0 !important;
-	border: 1px solid #1b5295; 
-	background-color: #006fbf;
+	border: 1px solid @d2l-save-button-border-color; 
+	background-color: @d2l-save-button-background-color;
 	border-radius: .3rem;
 	
 	button {		
-		color: #fff;
+		color: @d2l-save-button-color;
 		font-size: @font-size;
 		font-weight: @font-weight;
 		letter-spacing: .02rem;
@@ -108,12 +108,12 @@
 		}
 
 		&:hover {
-			color: #ffffff;
+			color: @d2l-save-button-color;
 		}
 	}
 
 	&:hover {
-		background-color: #1c5295;
+		background-color: @d2l-save-button-hover-background-color;
 	}
 }
 
@@ -122,12 +122,12 @@
 	left: 5rem !important;
 	top: initial !important;
 	bottom: 0 !important;
-	background-color: #f2f3f5;
-	border: 1px solid #d3d9e3;
+	background-color: @d2l-cancel-button-background-color;
+	border: 1px solid @d2l-cancel-button-border-color;
 	border-radius: .3rem;
 
 	button {		
-		color: #565a5c;
+		color: @d2l-cancel-button-color;
 		font-size: @font-size;
 		font-weight: @font-weight;
 		letter-spacing: .02rem;
@@ -141,12 +141,12 @@
 		}
 
 		&:hover {
-			color: #565a5c;
+			color: @d2l-cancel-button-color;
 		}
 	}
 
 	&:hover {
-		background-color: #e6eaf0;
+		background-color: @d2l-cancel-button-hover-background-color;
 	}
 }
 
