--- a/js/tinymce/skins/lightgray/Variables.less
+++ b/js/tinymce/skins/lightgray/Variables.less
@@ -226,6 +226,11 @@
 @d2l-textbox-font-size:           1rem;
 @d2l-textbox-font-weight:         300;
 @d2l-textbox-border:              #d3d9e3;
-
-
-
+@d2l-save-button-border-color:    #1b5295;
+@d2l-save-button-background-color: #006fbf;
+@d2l-save-button-hover-background-color: #1c5295;
+@d2l-save-button-color:			  #fff;
+@d2l-cancel-button-border-color:    #d3d9e3;
+@d2l-cancel-button-background-color: #f2f3f5;
+@d2l-cancel-button-hover-background-color: #e6eaf0;
+@d2l-cancel-button-color:			  #565a5c;
