--- a/js/tinymce/skins/lightgray/ListBox.less
+++ b/js/tinymce/skins/lightgray/ListBox.less
@@ -27,11 +27,18 @@
 
 // D2L
 // For the Font Family and Font Size buttons
-.@{prefix}-fullscreen .@{prefix}-listbox button {
+.@{prefix}-listbox button {
 	padding-right: 0px;
 
 	i.@{prefix}-caret {
 		margin-left: 0.5rem;
 	}
 }
+
+// Fix alignment button issue in the table dialog
+.@{prefix}-floatpanel.@{prefix}-window.@{prefix}-in .@{prefix}-formitem .@{prefix}-btn.@{prefix}-menubtn.@{prefix}-listbox.@{prefix}-last.@{prefix}-btn-has-text {
+	width: auto !important;
+}
+
+
 // End of D2L
