--- a/js/tinymce/skins/lightgray/TextBox.less
+++ b/js/tinymce/skins/lightgray/TextBox.less
@@ -48,6 +48,11 @@
 	.border-radius(6px);
 }
 
+// Fix Input box issues in Table dialog
+.@{prefix}-floatpanel.@{prefix}-window.@{prefix}-in .@{prefix}-formitem .@{prefix}-textbox.@{prefix}-abs-layout-item.@{prefix}-last {
+	padding: 0 0.2rem 0 0.2rem;
+}
+
 // Fix Input box issues in color picker
 .@{prefix}-colorpicker + .@{prefix}-container.@{prefix}-form.@{prefix}-abs-layout-item.@{prefix}-last .@{prefix}-textbox {
 	height: 1.2rem !important;
