--- a/js/tinymce/skins/lightgray/FloatPanel.less
+++ b/js/tinymce/skins/lightgray/FloatPanel.less
@@ -84,12 +84,12 @@
 
 // Conform OK button style to daylight
 .@{prefix}-floatpanel .@{prefix}-primary.@{prefix}-btn {
-	left: 0 !important;
 	top: initial !important;
 	bottom: 0 !important;
 	border: 1px solid @d2l-save-button-border-color; 
 	background-color: @d2l-save-button-background-color;
 	border-radius: .3rem;
+	margin-left: -0.5rem;
 	
 	button {		
 		color: @d2l-save-button-color;
@@ -110,8 +110,7 @@
 }
 
 // Conform Cancel button style to daylight
-.@{prefix}-floatpanel .@{prefix}-last.@{prefix}-btn {
-	left: 5rem !important;
+.@{prefix}-floatpanel .@{prefix}-last.@{prefix}-btn.@{prefix}-abs-layout-item.@{prefix}-btn-has-text {
 	top: initial !important;
 	bottom: 0 !important;
 	background-color: @d2l-cancel-button-background-color;
