US72612: addressed feedback from designer

--- a/js/tinymce/skins/lightgray/ListBox.less
+++ b/js/tinymce/skins/lightgray/ListBox.less
@@ -38,6 +38,7 @@
 // Fix alignment button issue in the table dialog
 .@{prefix}-floatpanel.@{prefix}-window.@{prefix}-in .@{prefix}-formitem .@{prefix}-btn.@{prefix}-menubtn.@{prefix}-listbox.@{prefix}-last.@{prefix}-btn-has-text {
 	width: auto !important;
+	height: 2rem !important;
 }
 
 
