--- a/js/tinymce/skins/lightgray/TabPanel.less
+++ b/js/tinymce/skins/lightgray/TabPanel.less
@@ -42,3 +42,10 @@
 .@{prefix}-rtl .@{prefix}-tab {
 	border-width: 0 0 0 1px;
 }
+
+// D2L
+// Fix tab missing top border issue
+.@{prefix}-tab.@{prefix}-active { 
+	border-top-width: 1px;
+}
+// End of D2L
