--- a/js/tinymce/skins/lightgray/TextBox.less
+++ b/js/tinymce/skins/lightgray/TextBox.less
@@ -51,6 +51,11 @@
 // Fix Input box issues in Table dialog
 .@{prefix}-floatpanel.@{prefix}-window.@{prefix}-in .@{prefix}-formitem .@{prefix}-textbox.@{prefix}-abs-layout-item.@{prefix}-last {
 	padding: 0 0.2rem 0 0.2rem;
+
+	&:hover, &:focus {
+    	border-width: 1px;
+    	padding: 0 0.2rem 0 0.2rem;
+	}
 }
 
 // Fix Input box issues in color picker
