US72612: fixed buttons not highlighted when focused problem

--- a/js/tinymce/skins/lightgray/TabPanel.less
+++ b/js/tinymce/skins/lightgray/TabPanel.less
@@ -48,4 +48,8 @@
 .@{prefix}-tab.@{prefix}-active { 
 	border-top-width: 1px;
 }
+
+.@{prefix}-tab:hover, .@{prefix}-tab:focus {
+	background: #f2f3f5;
+}
 // End of D2L
