--- a/js/tinymce/skins/lightgray/FloatPanel.less
+++ b/js/tinymce/skins/lightgray/FloatPanel.less
@@ -99,12 +99,12 @@
 		line-height: 1rem;
 		width: 4rem;
 
-		&:hover {
+		&:hover, &:focus {
 			color: @d2l-save-button-color;
 		}
 	}
 
-	&:hover {
+	&:hover, &:focus {
 		background-color: @d2l-save-button-hover-background-color;
 	}
 }
@@ -131,12 +131,12 @@
 			line-spacing: inherit;
 		}
 
-		&:hover {
+		&:hover, &:focus {
 			color: @d2l-cancel-button-color;
 		}
 	}
 
-	&:hover {
+	&:hover, &:focus {
 		background-color: @d2l-cancel-button-hover-background-color;
 	}
 }
