--- a/js/tinymce/skins/lightgray/TextBox.less
+++ b/js/tinymce/skins/lightgray/TextBox.less
@@ -14,7 +14,7 @@
 	*white-space: pre;
 	color: @text;
 	font-family: @font-family;
-	font-size: @d2l-textbox-font-size;
+	font-size: @d2l-text-font-size;
 	font-weight: @d2l-textbox-font-weight;
 }
 
