--- a/js/tinymce/skins/lightgray/Variables.less
+++ b/js/tinymce/skins/lightgray/Variables.less
@@ -223,7 +223,7 @@
 @d2l-window-close-button-border:  1px solid transparent;
 @d2l-window-close-border-hover:   1px solid rgba(0, 0, 0, 0.2);
 @d2l-window-appear-transition:    opacity ease-in .2s;
-@d2l-textbox-font-size:           1rem;
+@d2l-text-font-size:           1rem;
 @d2l-textbox-font-weight:         300;
 @d2l-textbox-border:              #d3d9e3;
 @d2l-save-button-border-color:    #1b5295;
@@ -234,3 +234,8 @@
 @d2l-cancel-button-background-color: #f2f3f5;
 @d2l-cancel-button-hover-background-color: #e6eaf0;
 @d2l-cancel-button-color:			  #565a5c;
+@d2l-span-label-title-font-size:      3rem;
+@d2l-table-bg-highlight:          #d3e7fa;
+@d2l-charmap-char-font-size:        0.85rem;
+@d2l-table-text-highlight:           #006fbf;
+
