US72612: use variable for bg color and address code review comment

--- a/js/tinymce/skins/lightgray/ListBox.less
+++ b/js/tinymce/skins/lightgray/ListBox.less
@@ -39,6 +39,10 @@
 .@{prefix}-floatpanel.@{prefix}-window.@{prefix}-in .@{prefix}-formitem .@{prefix}-btn.@{prefix}-menubtn.@{prefix}-listbox.@{prefix}-last.@{prefix}-btn-has-text {
 	width: auto !important;
 	height: 2rem !important;
+
+	.@{prefix}-caret {
+		top: 0;
+	}
 }
 
 
