--- a/js/tinymce/skins/lightgray/Label.less
+++ b/js/tinymce/skins/lightgray/Label.less
@@ -44,6 +44,7 @@ span.@{prefix}-label.@{prefix}-abs-layout-item {
 
 	&.@{prefix}-first, &.@{prefix}-last {
 		width: 100% !important;
+		left: 0 !important;
 	}
 
 	&.@{prefix}-first {
@@ -52,5 +53,8 @@ span.@{prefix}-label.@{prefix}-abs-layout-item {
 
 	&.@{prefix}-last {
 		font-size: @d2l-text-font-size !important;
+		// these changes are specific to just this span so i'm not gonna put the values as variables
+		white-space: normal !important;
+		line-height: 1rem !important;
 	}
 }
