Some initial changes for the toolbar dropdown

--- a/js/tinymce/skins/lightgray/Menu.less
+++ b/js/tinymce/skins/lightgray/Menu.less
@@ -5,8 +5,8 @@
 	left: 0; top: 0;
 	.reset-gradient();
 	z-index: 1000;
-	padding: 5px 0 5px 0;
-	margin: @menu-margin; 
+	//padding: 5px 0 5px 0;
+	margin: @menu-margin;
 	min-width: 160px;
 	background: @menu-bg;
 	border: 1px solid mix(rgb(red(@menu-border), green(@menu-border), blue(@menu-border)), @panel-bg, round(alpha(@menu-border) * 200));
