US75054: style drop down boxes

--- a/js/tinymce/skins/lightgray/MenuButton.less
+++ b/js/tinymce/skins/lightgray/MenuButton.less
@@ -35,7 +35,16 @@
 
 // D2L
 // For the Font Family and Font Size buttons
-.@{prefix}-fullscreen .@{prefix}-toolbar-grp .@{prefix}-menubtn.@{prefix}-fixed-width span {
-	width: auto;
-}
+.@{prefix}-fullscreen .@{prefix}-toolbar-grp .@{prefix}-menubtn {
+	height: 2rem;
+	span {
+		width: auto;
+	}
+
+	&:hover, &:focus, &:active {	
+		span {
+			color: @d2l-table-text-highlight;
+		}
+	}
+}	
 // End of D2L
