--- a/js/tinymce/skins/lightgray/MenuItem.less
+++ b/js/tinymce/skins/lightgray/MenuItem.less
@@ -144,3 +144,22 @@ div.@{prefix}-menu .@{prefix}-menu-item-sep, .@{prefix}-menu-item-sep:hover {
 	border-left-color: transparent;
 	border-right-color: @menuitem-caret-selected;
 }
+
+// D2L
+.@{prefix}-menu-item {
+	margin-bottom: 0;
+}
+
+.@{prefix}-menu-item:active  {
+	border: @menuitem-border-active;
+}
+
+.@{prefix}-menu-item:hover {
+	border: @menuitem-border-hover;
+}
+
+.mce-menu-item-preview.mce-active {
+	border: @menuitem-border-active;
+	background-color: @menuitem-bg-hover;
+}
+// End of D2L
