--- a/js/tinymce/skins/lightgray/TinyMCE.less
+++ b/js/tinymce/skins/lightgray/TinyMCE.less
@@ -92,16 +92,22 @@ div.@{prefix}-edit-area {
 }
 
 // For the table button
-.@{prefix}-i-table {
+.@{prefix}-menubtn .@{prefix}-i-table {
 	margin-right: 0.3rem;	
-	margin-top: -0.2rem;
+}
+
+.@{prefix}-menubtn {
+	&:hover, &:focus, &:active {
+		.@{prefix}-i-table {
+			color:	@d2l-table-text-highlight;
+		}
+	}
 }
 
 .@{prefix}-btn {
 	&:hover, &:focus, &:active {
-		.@{prefix}-i-table {
+		.@{prefix}-i-table, .@{prefix}-i-tabledelete, .@{prefix}-i-tableinsertrowbefore, .@{prefix}-i-tableinsertrowafter, .@{prefix}-i-tabledeleterow, .@{prefix}-i-tableinsertcolbefore, .@{prefix}-i-tableinsertcolafter, .@{prefix}-i-tabledeletecol {
 			color:	@d2l-table-text-highlight;
-			margin-top: 0.1rem;
 		}
 	}
 }
