--- a/js/tinymce/skins/lightgray/Variables.less
+++ b/js/tinymce/skins/lightgray/Variables.less
@@ -247,4 +247,5 @@
 @d2l-table-bg-highlight:          #d3e7fa;
 @d2l-charmap-char-font-size:        0.85rem;
 @d2l-table-text-highlight:           #006fbf;
-
+@d2l-menuitem-border-top-color: #e6eaf0;
+@d2l-font-weight:	300;
