US75054: fixed color button height issue in ff

--- a/js/tinymce/skins/lightgray/ColorPicker.less
+++ b/js/tinymce/skins/lightgray/ColorPicker.less
@@ -82,6 +82,11 @@
 // D2L
 .@{prefix}-btn.@{prefix}-colorbutton {
 	height: 2rem;
+
+	.@{prefix}-open { 
+		height: 2rem;
+	}
+
 	&:hover, &:focus, &:active {
 		.@{prefix}-i-forecolor {		
 			color: @d2l-table-text-highlight;			
