Removed separator in the table drop down menu

--- a/js/tinymce/skins/lightgray/Menu.less
+++ b/js/tinymce/skins/lightgray/Menu.less
@@ -32,3 +32,10 @@
 .@{prefix}-menu-sub-br-bl { margin: 6px 0 0 -1px; }
 .@{prefix}-menu-sub-tl-tr { margin: -6px 0 0 1px; }
 .@{prefix}-menu-sub-bl-br { margin: 6px 0 0 1px; }
+
+// D2L
+.@{prefix}-menu {
+	.@{prefix}-menu-item.@{prefix}-menu-item-sep.@{prefix}-menu-item-normal.@{prefix}-stack-layout-item {
+		display: none;
+	}
+}
