US72489: style RTL

--- a/js/tinymce/skins/lightgray/ButtonGroup.less
+++ b/js/tinymce/skins/lightgray/ButtonGroup.less
@@ -69,3 +69,10 @@
 	padding-right: @flow-layout-spacing + 2px;
 	margin-right: @flow-layout-spacing + 2px;
 }
+
+// D2L
+// RTL
+.@{prefix}-rtl.@{prefix}-btn-group>div {
+	direction:rtl;
+} 
+// End of D2L
