--- a/js/tinymce/skins/lightgray/ComboBox.less
+++ b/js/tinymce/skins/lightgray/ComboBox.less
@@ -57,4 +57,13 @@
 		}
 	}
 }
+
+// Fix color dialog icon vertical alignment
+.@{prefix}-combobox.@{prefix}-colorbox {
+	.@{prefix}-btn.@{prefix}-open {
+		.@{prefix}-ico {
+			vertical-align: middle;
+		}
+	}
+}
 // End of D2L
