--- a/js/tinymce/skins/lightgray/FloatPanel.less
+++ b/js/tinymce/skins/lightgray/FloatPanel.less
@@ -109,6 +109,11 @@
 	}
 }
 
+// RTL
+.@{prefix}-rtl.@{prefix}-floatpanel .@{prefix}-primary.@{prefix}-btn {
+	margin-left: 0.5rem;
+}
+
 // Conform Cancel button style to daylight
 .@{prefix}-floatpanel .@{prefix}-last.@{prefix}-btn.@{prefix}-abs-layout-item.@{prefix}-btn-has-text {
 	top: initial !important;
