--- a/js/tinymce/skins/lightgray/MenuButton.less
+++ b/js/tinymce/skins/lightgray/MenuButton.less
@@ -58,4 +58,9 @@
 		background-color: inherit !important;
 	}
 }	
+
+// RTL
+.@{prefix}-rtl .@{prefix}-menubtn button {
+	text-align: left;
+}
 // End of D2L
