--- a/js/tinymce/skins/lightgray/MenuItem.less
+++ b/js/tinymce/skins/lightgray/MenuItem.less
@@ -162,6 +162,13 @@ div.@{prefix}-menu .@{prefix}-menu-item-sep, .@{prefix}-menu-item-sep:hover {
 	}
 }
 
+// RTL 
+.@{prefix}-rtl .@{prefix}-menu-item .@{prefix}-ico {
+	margin-right: 0;
+    margin-left: 0.5rem
+}
+
+
 // Set border radius for the first and last menu item
 .@{prefix}-menu-item.@{prefix}-first {
 	border-top-left-radius: .25rem;
