--- a/js/tinymce/skins/lightgray/SplitButton.less
+++ b/js/tinymce/skins/lightgray/SplitButton.less
@@ -59,4 +59,11 @@
     border-left-width: 1px;
     border-left-style: solid;
 }
+
+// RTL 
+.@{prefix}-rtl .@{prefix}-splitbtn:hover .@{prefix}-open {
+    border-left-width: 0;
+    border-right-width: 1px;
+    border-right-style: solid;
+}
 // End of D2L
