Adjusted Icons css to properly display TinyMCE icons when in different languages

--- a/js/tinymce/skins/lightgray/Icons.less
+++ b/js/tinymce/skins/lightgray/Icons.less
@@ -25,7 +25,7 @@
 @iconSize: 0.9rem; // 16px;
 
 .@{prefix}-ico {
-	font-family: 'tinymce', Arial;
+	font-family: 'tinymce', Arial !important;
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
