Updated styles to match recent d2l-typography changes

--- a/js/tinymce/skins/lightgray/Content.less
+++ b/js/tinymce/skins/lightgray/Content.less
@@ -1,7 +1,12 @@
 /* Content.less */
-
+/*
 @font-family: Verdana, Arial, Helvetica, sans-serif;
 @font-size: 11px;
+*/
+
+//D2L changes to match d2l-typography
+@font-family: Lato,'Lucida Sans Unicode','Lucida Grande',sans-serif;
+@font-size: 0.95rem;
 
 body {
 	background-color: #FFFFFF;
