--- a/js/tinymce/skins/lightgray/MenuItem.less
+++ b/js/tinymce/skins/lightgray/MenuItem.less
@@ -17,7 +17,7 @@
 
 .@{prefix}-menu-item .@{prefix}-ico, .@{prefix}-menu-item .@{prefix}-text {
 	color: @menuitem-text;
-	font-size: 1rem;
+	font-size: @d2l-text-font-size;
 }
 
 .@{prefix}-menu-item.@{prefix}-disabled .@{prefix}-text, .@{prefix}-menu-item.@{prefix}-disabled .@{prefix}-ico {
@@ -162,7 +162,7 @@ div.@{prefix}-menu .@{prefix}-menu-item-sep, .@{prefix}-menu-item-sep:hover {
 	}
 }
 
-// RTL 
+// RTL
 .@{prefix}-rtl .@{prefix}-menu-item .@{prefix}-ico {
 	margin-right: 0;
     margin-left: 0.5rem
