--- a/js/tinymce/skins/lightgray/MenuItem.less
+++ b/js/tinymce/skins/lightgray/MenuItem.less
@@ -154,6 +154,8 @@ div.@{prefix}-menu .@{prefix}-menu-item-sep, .@{prefix}-menu-item-sep:hover {
 
 	span {
 		font-weight: @d2l-font-weight;
+		font-family: inherit;
+		font-weight: inherit;
 	}
 
 	// Increase space between icons and labels
