Minor fix for missing single quotes around Lato

--- a/js/tinymce/skins/lightgray/Content.less
+++ b/js/tinymce/skins/lightgray/Content.less
@@ -5,15 +5,12 @@ Default values:
 @font-size: 11px;
 */
 
-//D2L changes to match d2l-typography
-//@font-family: Lato,'Lucida Sans Unicode','Lucida Grande',sans-serif;
-
 //D2L additions
 @font-size: 0.95rem;
 @d2l-color-ferrite: #565a5c;
 
 html {
-	font-family: Lato,'Lucida Sans Unicode','Lucida Grande',sans-serif;
+	font-family: 'Lato','Lucida Sans Unicode','Lucida Grande',sans-serif;
 }
 
 html[lang=ar-sa]{
