--- a/js/tinymce/skins/lightgray/Variables.less
+++ b/js/tinymce/skins/lightgray/Variables.less
@@ -12,7 +12,7 @@
 
 // Default font
 // @font-family:                    "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family:                    Lato,'Lucida Sans Unicode','Lucida Grande',sans-serif; //d2l "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family:                    'Lato','Lucida Sans Unicode','Lucida Grande',sans-serif; //d2l "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-size:                      0.7rem; // 14px;
 @line-height:                    1rem; // 20px;
 @font-weight:					           700; //d2l default font-weight
