Added support for Lato

--- a/js/tinymce/skins/lightgray/Content.less
+++ b/js/tinymce/skins/lightgray/Content.less
@@ -6,6 +6,7 @@ Default values:
 */
 
 //D2L additions
+@import url("https://s.brightspace.com/lib/fonts/0.3.0/fonts.css");
 @font-size: 0.95rem;
 @d2l-color-ferrite: #565a5c;
 
