Updated positioning for float panel OK button

--- a/js/tinymce/skins/lightgray/FloatPanel.less
+++ b/js/tinymce/skins/lightgray/FloatPanel.less
@@ -84,7 +84,7 @@
 
 // Conform OK button style to daylight
 .@{prefix}-floatpanel .@{prefix}-primary.@{prefix}-btn {
-	top: initial !important;
+	//top: initial !important;
 	bottom: 0 !important;
 	border: 1px solid @d2l-save-button-border-color; 
 	background-color: @d2l-save-button-background-color;
