US82063 - Change up skin less files to make the a11ychecker dialog not look terrible

--- a/js/tinymce/skins/lightgray/Button.less
+++ b/js/tinymce/skins/lightgray/Button.less
@@ -183,4 +183,9 @@
 	width: auto;
 	position: relative;
 }
+
+// Make primary buttons stay within frame
+.@{prefix}-btn.@{prefix}-primary {
+	padding: 0;
+}
 // End of D2L
