tooltips are visible and grey

--- a/js/tinymce/skins/lightgray/ToolTip.less
+++ b/js/tinymce/skins/lightgray/ToolTip.less
@@ -8,7 +8,7 @@
 
 .@{prefix}-tooltip-inner {
 	font-size: @tooltip-font-size;
-	background-color: @tooltip-bg;
+	background-color: #565A5C;
 	color: @tooltip-text;
 	max-width: 200px;
 	padding: 5px 8px 4px 8px;
