--- a/js/tinymce/skins/lightgray/ToolTip.less
+++ b/js/tinymce/skins/lightgray/ToolTip.less
@@ -1,6 +1,7 @@
 // Tooltip
 
 .@{prefix}-tooltip {
+	//display: none; // d2l
 	position: absolute;
 	padding: 5px;
 	.opacity(0.8);
@@ -8,8 +9,8 @@
 
 .@{prefix}-tooltip-inner {
 	font-size: @tooltip-font-size;
-	background-color: #565A5C;
-	color: @tooltip-text;
+	background-color: #FFFFFF;
+	color:  #565A5C;
 	max-width: 200px;
 	padding: 5px 8px 4px 8px;
 	text-align: center;
@@ -18,6 +19,9 @@
 
 .@{prefix}-tooltip-inner {
 	.border-radius(3px);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #AAAAAA;
 }
 
 .@{prefix}-tooltip-inner {
@@ -25,6 +29,7 @@
 }
 
 .@{prefix}-tooltip-arrow {
+	display: none;
 	position: absolute;
 	width: 0;
 	height: 0;
