--- a/js/tinymce/skins/lightgray/ToolTip.less
+++ b/js/tinymce/skins/lightgray/ToolTip.less
@@ -1,7 +1,6 @@
 // Tooltip
 
 .@{prefix}-tooltip {
-	//display: none; // turn them off
 	position: absolute;
 	padding: 5px;
 	.opacity(0.8);
@@ -18,7 +17,7 @@
 	animation: fadeInFromNone 2s linear;
 }
 
-@-webkit-keyframes fadeInFromNone {
+@keyframes fadeInFromNone {
     0% {
       opacity: 0;
     }
@@ -42,7 +41,7 @@
 }
 
 .@{prefix}-tooltip-arrow {
-	display: none;
+	display: none;  //d2l - for styling
 	position: absolute;
 	width: 0;
 	height: 0;
