--- a/js/tinymce/skins/lightgray/Content.Objects.less
+++ b/js/tinymce/skins/lightgray/Content.Objects.less
@@ -18,6 +18,11 @@
 	max-width: none;
 }
 
+//D2L added table value
+.mce-content-body > table:not([class]) {
+	border-style: solid;
+}
+
 .mce-object {
 	border: 1px dotted #3A3A3A;
 	background: #D5D5D5 url(img/object.gif) no-repeat center;
